# getaway

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STYLEGUIDE.md  capt-hook.toml  ops.json
.claude/: capt-hook.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
cli/: pyproject.toml
cli/getaway/: afford.py  airports.py  awardwallet.py  bridge.py  cli.py  constants.py  enhance.py  factors.py  fit.py  journeys.py  keys.py  learnings.py  paths.py  prefs.py  quality.py  registry.py  seats.py  serp.py  shortlist.py  stays.py  store.py  sweeps.py  trips.py
cli/getaway/data/: banks.json  card_products.json  factors.json  points_pricing.json  programs.json  regions.json  seat_quality.json  status_earning.json  transfer_partners.json
cli/tests/: _api.py  _runner.py  conftest.py  test_afford.py  test_awardwallet.py  test_bridge.py  test_checkpoints.py  test_compile.py  test_concurrency.py  test_enhance.py  test_factors.py  test_finalize.py  test_fit.py  test_journeys.py  test_keys.py  test_learnings.py  test_paths.py  test_pipeline.py  test_prefs.py  test_quality.py  test_registry.py  test_seats.py  test_serp.py  test_shortlist.py  test_stays.py  test_store.py  test_sweeps.py  test_trips.py
cli/tests/fixtures/: availability_page.json  awardwallet_account.json  awardwallet_user.json  awardwallet_users.json  routes.json  search_page.json  serpapi_flights.json  serpapi_flights_other_only.json  trip_detail.json
docs/: awardwallet-api.md  seats-aero-api.md  serpapi-flights-api.md
hooks/: hooks.json  onboard.py  reflect.py
(+73 files in other folders)
